<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.macstudent.thunder.LoginActivity">

    <TextView
        android:id="@+id/txtLoginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LoginHeader"
        android:textColor="@color/colorAccent"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:hint="@string/UserNamePlaceholder"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="62dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="119dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLoginCaption"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="231dp" />

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="231dp" />

</LinearLayout>
